<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Mitaxi Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="mitaxi_name">Mitaxi</string>
    
    <string name="dialog_confirm_message">Si</string>
    <string name="dialog_decline_message">No</string>
    
    <string name="dialog_gps_on"></string>
    <string name="gps_off_aviso">GPS apagado</string>
    <string name="gps_off_message">¿Deseas activarlo?</string>
    <string name="gps_location_found">Ubicación encontrada</string>
    
    <string name="mitaxi_facebook">Facebook</string>
    <string name="mitaxi_twitter">Twitter</string>
    
    <string name="mitaxiregister_name">Registro</string>
    <string name="mitaxiregister_error">Corrige los datos antes de avanzar.</string>
    <string name="mitaxiregister_error_string">Escribe cadena válida [a-z A-Z].</string>
    <string name="mitaxiregister_error_number">Escribe número válido [0-9].</string>
    <string name="mitaxiregister_error_email">Escribe sintaxis de correo válida.</string>
    <string name="mitaxiregister_empty">Los campos no pueden dejarse en blanco.</string>
    <string name="mitaxiregister_tv_title">Registro</string>
    <string name="mitaxiregister_et_name_hint">Nombre(s)</string>
    <string name="mitaxiregister_et_lastname_hint">Apellido Paterno</string>
    <string name="mitaxiregister_et_email_hint">Dirección de correo</string>
    <string name="mitaxiregister_et_teluser_hint">Teléfono</string>
    <string name="mitaxiregister_et_telemergency_hint">Teléfono de emergencia</string>
    <string name="mitaxiregister_btn_previous">Anterior</string>
    <string name="mitaxiregister_btn_next">Siguiente</string>
    <string name="mitaxiregister_btn_finish">Finalizar</string>
    <string name="mitaxiregister_tv_socialnetworks">Redes sociales</string>
    
    <string name="pickuporigindestiny_tv_inforigin_text">Manten presionado un punto del mapa para seleccionar el origen.</string>
    <string name="pickuporigindestiny_tv_infdestiny_text">Manten presionado un punto del mapa para seleccionar el destino.</string>
    <string name="pickuporigindestiny_tv_infdrag_text">Si deseas mover el origen o destino, manten presionada una marca y arrastra.</string>
    
    <string name="map_not_ready">Mapa no listo.</string>
    
</resources>